--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "studious-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "http://JosemAVSG.github.io/studious-octo-fortnight",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -12,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "bootstrap": "^5.3.2",
+    "gh-pages": "^6.1.0",
     "mapbox-gl": "^2.15.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
